--- a/bby.html
+++ b/bby.html
@@ -449,7 +449,7 @@
             } else if (response === 'absolutely') {
                 message = "Yes, a thousand times yes! Our new beginning starts now, and I couldn't be more excited to share every moment with you! 💕🌟";
             } else {
-                message = "woooow😭😭😭";
+                message = "woooow😭😭😭I CANT BELIVE YOU ACTUALLY TRIED😔";
             }
 
             responseMessage.textContent = message;
